@@ -14,3 +14,4 @@
 #cl|clustering = <cluster points if present>
 #e|emitMostLikely = <emit most likely cluster if clustering. Default: true>
 #t|threshold = <threshold if clustering and not emitMostLikely. Default: 0.0>
+#rs|randomSeed =<Value to seed RNG with if set>
