@@ -10,3 +10,4 @@
 #dm|distance = <distance measure class name. Default: SquaredEuclideanDistanceMeasure>
 #cd|convergenceDelta = <the convergence threshold. Default: 0.5>
 #r|numReduce = <the number of reduce tasks to launch. Default: 1>
+#rs|randomSeed =<Value to seed RNG with if set>
